--- a/Kaiserreich Korean Translation/localisation/KR_State_Names_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_State_Names_l_english.yml
@@ -2,10 +2,10 @@ l_english:
 
  STATE_1:0 "코르스"
  STATE_2:0 "라티움"
- STATE_3:0 "미틀란트"
+ STATE_3:0 "미텔란트"
  STATE_4:0 "니더외스터라이히"
- STATE_5:0 "동프로이센"
- STATE_6:0 "플랑드르"
+ STATE_5:0 "오스트프로이센"
+ STATE_6:0 "플란데런"
  STATE_7:0 "서부 네덜란드"
  STATE_8:0 "룩셈부르크"
  STATE_9:0 "체히"
@@ -28,17 +28,17 @@ l_english:
  STATE_26:0 "오베르뉴"
  STATE_27:0 "부르고뉴"
  STATE_28:0 "엘자스로트링겐"
- STATE_29:0 "프랑스플렁드흐"
+ STATE_29:0 "프란스플란데런"
  STATE_30:0 "루아르"
  STATE_31:0 "가론강"
  STATE_32:0 "론"
  STATE_33:0 "플렌드라루아"
- STATE_34:0 "왈롱"
+ STATE_34:0 "발로니"
  STATE_35:0 "남부 네덜란드"
  STATE_36:0 "북부 네덜란드"
  STATE_37:0 "셸란"
  STATE_38:0 "노를란드"
- STATE_39:0 "남티롤"
+ STATE_39:0 "쥐트티롤"
  STATE_40:0 "바르나울"
  STATE_41:0 "마드리드"
  STATE_42:0 "모젤란드"
@@ -50,7 +50,7 @@ l_english:
  STATE_48:0 "소피아"
  STATE_49:0 "앙카라"
  STATE_50:0 "뷔르템베르크"
- STATE_51:0 "외스터라인란트"
+ STATE_51:0 "오스트라인란트"
  STATE_52:0 "오버바이에른"
  STATE_53:0 "니더바이에른"
  STATE_54:0 "프랑켄"
@@ -65,7 +65,7 @@ l_english:
  STATE_63:0 "힌터포메른"
  STATE_64:0 "브란덴부르크"
  STATE_65:0 "작센"
- STATE_66:0 "니더실레시아"
+ STATE_66:0 "니더술레지엔"
  STATE_67:0 "오버슐레지엔"
  STATE_68:0 "노이마르크"
  STATE_69:0 "도이치뵈멘"
@@ -74,7 +74,7 @@ l_english:
  STATE_72:1 "북부 샨"
  STATE_73:0 "마라무레슈"
  STATE_74:0 "도이치메렌"
- STATE_75:0 "모라비아"
+ STATE_75:0 "모라바"
  STATE_76:0 "북부 에르데이"
  STATE_77:0 "실리스트라"
  STATE_78:0 "바사라비아"
@@ -121,7 +121,7 @@ l_english:
  STATE_119:0 "얼스터"
  STATE_120:0 "하일랜드"
  STATE_121:0 "로디언"
- STATE_122:0 "웨일즈"
+ STATE_122:0 "웨일스"
  STATE_123:0 "콘월"
  STATE_124:0 "고틀란드"
  STATE_125:0 "이스트 앵글리아"
@@ -150,7 +150,7 @@ l_english:
  STATE_148:0 "라피"
  STATE_149:0 "포흐얀마"
  STATE_150:0 "카이누"
- STATE_151:0 "오스트스위스"
+ STATE_151:0 "오스트슈바이츠"
  STATE_152:0 "오버외스터라이히"
  STATE_153:0 "티롤"
  STATE_154:0 "알푈드"
@@ -174,7 +174,7 @@ l_english:
  STATE_172:0 "나바라"
  STATE_173:0 "그라나다"
  STATE_174:0 "레온"
- STATE_175:0 "라 만차"
+ STATE_175:0 "라만차"
  STATE_176:0 "카스틸랴 라 비에하"
  STATE_177:0 "발레아레스 제도"
  STATE_178:0 "카나리아 제도"
@@ -232,7 +232,7 @@ l_english:
  STATE_230:0 "하야스탄"
  STATE_231:0 "사카르트벨로"
  STATE_232:0 "그로즈니"
- STATE_233:0 "블라디카프카즈"
+ STATE_233:0 "블라디캅카스"
  STATE_234:0 "예카테리노다르"
  STATE_235:0 "스타브로폴"
  STATE_236:0 "아스트라한"
@@ -251,7 +251,7 @@ l_english:
  STATE_249:0 "카잔"
  STATE_250:0 "심비르스크"
  STATE_251:0 "사마라"
- STATE_252:0 "니즈니 노보그라드"
+ STATE_252:0 "니즈니노보그라드"
  STATE_253:0 "이바노보"
  STATE_254:0 "랴잔"
  STATE_255:0 "펜자"
@@ -301,7 +301,7 @@ l_english:
  STATE_299:0 "이슬라스 말비나스"
  STATE_300:0 "우루과이"
  STATE_301:0 "파라과이"
- STATE_302:0 "라 파스"
+ STATE_302:0 "라파스"
  STATE_303:0 "리마"
  STATE_304:0 "파나마"
  STATE_305:0 "에콰도르"
@@ -313,7 +313,7 @@ l_english:
  STATE_311:0 "벨리즈"
  STATE_312:0 "산페드로술라"
  STATE_313:0 "과테말라"
- STATE_314:0 "엘 살바도르"
+ STATE_314:0 "엘살바도르"
  STATE_315:0 "아바나"
  STATE_316:0 "코스타리카"
  STATE_317:0 "니카라과"
@@ -321,14 +321,14 @@ l_english:
  STATE_319:0 "도미니카 공화국"
  STATE_320:0 "마드라스"
  STATE_321:0 "고아"
- STATE_322:0 "티벳"
+ STATE_322:0 "티베트"
  STATE_323:0 "네팔"
  STATE_324:0 "부탄"
  STATE_325:0 "윈난"
  STATE_326:0 "홍콩"
  STATE_327:0 "중부 루존"
  STATE_328:0 "안둥"
- STATE_329:0 "탄누투바"
+ STATE_329:0 "투바"
  STATE_330:0 "몽골"
  STATE_331:0 "뉴펀들랜드"
  STATE_332:0 "래브라도"
@@ -362,8 +362,8 @@ l_english:
  STATE_360:0 "펜실베이니아"
  STATE_361:0 "메릴랜드"
  STATE_362:0 "버지니아"
- STATE_363:0 "노스 캐롤라이나"
- STATE_364:0 "사우스 캐롤라이나"
+ STATE_363:0 "노스캐롤라이나"
+ STATE_364:0 "사우스캐롤라이나"
  STATE_365:0 "조지아"
  STATE_366:0 "플로리다"
  STATE_367:0 "앨라배마"
@@ -375,7 +375,7 @@ l_english:
  STATE_373:0 "미주리"
  STATE_374:0 "오클라호마"
  STATE_375:0 "북부 텍사스"
- STATE_376:0 "뉴 멕시코"
+ STATE_376:0 "뉴멕시코"
  STATE_377:0 "애리조나"
  STATE_378:0 "북부 캘리포니아"
  STATE_379:0 "네바다"
@@ -429,8 +429,8 @@ l_english:
  STATE_427:0 "하이데라바드"
  STATE_428:0 "구자라트"
  STATE_429:0 "봄베이"
- STATE_430:0 "동벵골"
- STATE_431:0 "서벵골"
+ STATE_430:0 "동 벵골"
+ STATE_431:0 "서 벵골"
  STATE_432:0 "아삼"
  STATE_433:0 "라자스탄"
  STATE_434:0 "마니푸르"
@@ -454,7 +454,7 @@ l_english:
  STATE_452:0 "메르사마트루"
  STATE_453:0 "시나"
  STATE_454:0 "쿠뒤시스 세리프"
- STATE_455:0 ""
+ STATE_455:0 "마 안"
  STATE_456:0 "아스완"
  STATE_457:0 "동부 사막"
  STATE_458:0 "튀니스"
@@ -524,9 +524,9 @@ l_english:
  STATE_522:0 "호주 서부"
  STATE_523:0 "파푸아"
  STATE_524:0 "타이호쿠"
- STATE_525:0 "남조선"
+ STATE_525:0 "미마미초센"
  STATE_526:0 "오키나와"
- STATE_527:0 "북조선"
+ STATE_527:0 "기타초센"
  STATE_528:0 "규슈"
  STATE_529:0 "주고쿠"
  STATE_530:0 "시코쿠"
@@ -536,7 +536,7 @@ l_english:
  STATE_534:0 "호쿠리쿠"
  STATE_535:0 "고신에쓰"
  STATE_536:0 "홋카이도"
- STATE_537:0 "카라푸토"
+ STATE_537:0 "카라후토"
  STATE_538:0 "에콰도리얼콩고"
  STATE_539:0 "가봉"
  STATE_540:0 "앙골라"
@@ -610,12 +610,12 @@ l_english:
  STATE_608:0 "베이징"
  STATE_609:0 "톈진"
  STATE_610:0 "러허"
- STATE_611:0 "남차하르"
+ STATE_611:0 "남 차하르"
  STATE_612:0 "차하르"
  STATE_613:0 "난징"
  STATE_614:0 "지리"
  STATE_615:0 "동부 산시"
- STATE_616:0 "내몽골"
+ STATE_616:0 "네이멍구"
  STATE_617:0 "우루무치"
  STATE_618:0 "중가리아"
  STATE_619:0 "야르칸드"
@@ -654,9 +654,9 @@ l_english:
  STATE_652:0 "오렌부르크"
  STATE_653:0 "예카테린부르크"
  STATE_654:0 "울랄라"
- STATE_655:0 "북 카라푸토"
+ STATE_655:0 "북 카라후토"
  STATE_656:0 "쿠웨이트"
- STATE_657:0 "블라고베시첸스크"
+ STATE_657:0 "블라고베셴스크"
  STATE_658:0 "아부다비"
  STATE_659:0 "아덴"
  STATE_660:0 "적도 아프리카"
@@ -674,7 +674,7 @@ l_english:
  STATE_672:0 "동부 수마트라"
  STATE_673:0 "셀레베스"
  STATE_674:0 "호주 중부"
- STATE_675:0 "알 하자라"
+ STATE_675:0 "알하자라"
  STATE_676:0 "무술"
  STATE_677:0 "할레프"
  STATE_678:0 "룹 알할리 사막"
@@ -705,7 +705,7 @@ l_english:
  STATE_703:0 "히멜파르츠 섬"
  STATE_704:0 "장크트헬레나"
  STATE_705:0 "상투메"
- STATE_706:0 "호엔촐레른가 제도"
+ STATE_706:0 "호엔촐레른 제도"
  STATE_707:0 "모리셔스"
  STATE_708:0 "코모로"
  STATE_709:0 "쿤 군도"
@@ -721,7 +721,7 @@ l_english:
  STATE_719:0 "나탈"
  STATE_720:0 "성 페드로 섬"
  STATE_721:0 "포르투갈령 티모르"
- STATE_722:0 "페트사모"
+ STATE_722:0 "페차모"
  STATE_723:0 "남섬"
  STATE_724:0 "크라 지협"
  STATE_725:0 "나보도"
@@ -735,7 +735,7 @@ l_english:
  STATE_733:0 "안다만 제도"
  STATE_734:0 "티레니어스 제도"
  STATE_735:0 "사부아"
- STATE_736:0 "퀴스트란트"
+ STATE_736:0 "퀴스텐란트"
  STATE_737:0 "비스마르크 군도"
  STATE_738:0 "아루 제도"
  STATE_739:0 "하이다과이"
@@ -743,7 +743,7 @@ l_english:
  STATE_741:0 "도이치발로니엔"
  STATE_742:0 "아브루초"
  STATE_743:0 "상하이"
- STATE_744:0 "칭다우"
+ STATE_744:0 "칭타우"
  STATE_745:0 "다롄"
  STATE_746:0 "닝보"
  STATE_747:0 "푸저우"
@@ -773,15 +773,15 @@ l_english:
  STATE_771:0 "바르나"
  STATE_772:0 "도브루자"
  STATE_773:0 "콘스탄티니예"
- STATE_774:0 "북간수"
+ STATE_774:0 "북부 간쑤"
  STATE_775:0 "슈타이어마르크"
- STATE_776:0 "서프로이센"
- STATE_777:0 "카토비체"
+ STATE_776:0 "베스트프로이센"
+ STATE_777:0 "카토비"
  STATE_778:0 "옘틀란드"
  STATE_779:0 "난치히"
  STATE_780:0 "바덴"
  STATE_781:0 "베스트라인란트"
- STATE_782:0 "노드슐레스비히"
+ STATE_782:0 "노르트슐레스비히"
  STATE_783:0 "트렌티노"
  STATE_784:0 "부르겐란트"
  STATE_785:0 "플라투 로레인"
@@ -794,7 +794,7 @@ l_english:
  STATE_792:0 "리우네"
  STATE_793:1 "아스투리아스"
  STATE_794:0 "스리옘"
- STATE_795:0 "트리에스테"
+ STATE_795:0 "트리"
  STATE_796:0 "북부 뉴욕"
  STATE_797:0 "샌 프란시스코"
  STATE_798:0 "로스 엔젤레스"
@@ -864,8 +864,8 @@ l_english:
  STATE_862:0 "수단 사막"
  STATE_863:0 "남서수오미"
  STATE_864:0 "사보"
- STATE_865:0 "웨스트카렐리야"
- STATE_866:0 "동 네덜란드"
+ STATE_865:0 "렌시카리알라"
+ STATE_866:0 "동부 네덜란드"
  STATE_867:0 "트리반코어"
  STATE_868:0 "콜하푸르"
  STATE_869:0 "르완다"
@@ -941,7 +941,7 @@ l_english:
  STATE_939:0 "오크니"
  STATE_940:0 "올리벤사"
  STATE_941:0 "독일령 사모아"
- STATE_942:0 "포어아를베르크"
+ STATE_942:0 "포를베르크"
  STATE_943:0 "오트사부아"
  STATE_944:0 "하라르"
  STATE_945:0 "북부 케이프"
@@ -978,14 +978,14 @@ l_english:
  STATE_976:0 "카사이"
  STATE_977:0 "키부"
 STATE_978:0 "림뷔흐르"
-STATE_979:0 "네덜란드령 플랑드르"
+STATE_979:0 "제이우스플란데런"
 STATE_980:0 "플랑드르 로마네"
 STATE_981:0 "나지란"
 STATE_982:0 "아시르"
 STATE_983:0 "브르타뉴"
 STATE_984:0 "피레네"
 STATE_985:0 "캔버라"
-STATE_986:0 "북퀸즐랜드"
+STATE_986:0 "북 퀸즐랜드"
 STATE_987:0 "킴벌리"
 STATE_988:0 "필바라"
 STATE_989:0 "살로니카"
