--- a/Kaiserreich Korean Translation/localisation/KR_Russia_Domestic_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Russia_Domestic_l_english.yml
@@ -188,8 +188,8 @@ rusd.50.t:0 "The Acting President Addresses the Duma"
 rusd.50.d:0 "After Kerensky's assassination the country is still in chaos. Although the Duma managed to maintain the mantle of legislative and executive power, the government's control of the apparatus of state is still unstable. In an attempt to restore popular faith in parliament, the Acting President today held a speech in a packed Duma, stressing the importance of maintaining both order and the civil liberties of all the Russian Republic's citizens"
 rusd.50.a:0 "The Duma ensures Russian Freedom and Russian Greatness!"
 
-rusd.51.t:0 "Marshal Wrangel Addresses the Nation"
-rusd.51.d:0 "A few days after seizing power, Marshal Wrangel went forward to address the troubled Russian people. A man of noble birth, Wrangel will do anything to insure the survival of Russia, even if that means letting go of his dreams of a new Romanov monarchy. In his widely publicised speech, the marshal declared his intention to maintain order and stability in Russia by any means necessary - even if it means compromising with the more extreme rightist groups."
+rusd.51.t:0 "Field marshal Wrangel Addresses the Nation"
+rusd.51.d:0 "A few days after seizing power, Field marshal Wrangel went forward to address the troubled Russian people. A man of noble birth, Wrangel will do anything to insure the survival of Russia, even if that means letting go of his dreams of a new Romanov monarchy. In his widely publicised speech, the Field marshal declared his intention to maintain order and stability in Russia by any means necessary - even if it means compromising with the more extreme rightist groups."
 rusd.51.a:0 "The Black Baron shall bring order to holy Russia!"
 
 rusd.52.t:0 "The Patriarch's Demands"
@@ -242,7 +242,7 @@ rusd.66.a:0 "Let the Reds quarrel!"
 rusd.66.b:0 "Oh no!"
 
 rusd.67.t:0 "Splintering within the Conservatives"
-rusd.67.d:0 "Dmitri Romanov's authority and charisma was one of the few things that kept the Russian conservatives strong and vibrant. With his death, the movement quickly split into two branches; the so-called Siloviki, organised around marshal Denikin and consisting mostly of White military officers, and the conservative Civilians, gathered around professor Nikolai Trubetskoy. Without his protector, Yusupov was quickly replaced by Trubetskoy."
+rusd.67.d:0 "Dmitri Romanov's authority and charisma was one of the few things that kept the Russian conservatives strong and vibrant. With his death, the movement quickly split into two branches; the so-called Siloviki, organised around Field marshal Denikin and consisting mostly of White military officers, and the conservative Civilians, gathered around professor Nikolai Trubetskoy. Without his protector, Yusupov was quickly replaced by Trubetskoy."
 rusd.67.a:0 "Let them quarrel!"
 
 rusd.68.t:0 "The X Duma Elections"
@@ -377,7 +377,7 @@ rusd.108.t:0 "Nikolai Krasnov dies"
 rusd.108.d:0 "A noted architect, known for designing the current outlook of the Yalta resort, has passed away. The government plans to erect a monument for him in the city, should an opportunity arise."
 
 rusd.109.t:0 "Lavr Kornilov dies"
-rusd.109.d:0 "Marshal Kornilov, one of the four officers that led the White Movement against the Bolsheviks during the civil war, has passed away. Kornilov has greatly contributed to post-revolutionary Russia's politics. Two weeks of national mourning have been declared as the people prepare for the funeral ceremony."
+rusd.109.d:0 "Field marshal Kornilov, one of the four officers that led the White Movement against the Bolsheviks during the civil war, has passed away. Kornilov has greatly contributed to post-revolutionary Russia's politics. Two weeks of national mourning have been declared as the people prepare for the funeral ceremony."
 
 rusd.1091.t:0 "Sergius of Nizhny Novgorod dies"
 rusd.1091.d:0 "Bishop Sergius has passed away in his sleep."
@@ -394,13 +394,13 @@ rusd.112.d:0 "The Tsarist education Minister and present conservative activist h
 rusd.113.t:0 "Nadezhda Krupskaya dies"
 rusd.113.d:0 "Nadezhda Krupskaya has passed away. Being Lenin's widow, she became the symbol for all remaining Bolsheviks after the disaster of the Civil War. In 1922 she was elected in the VI Duma and started a campaign against illiteracy that, with support by the President, launched in 1924. She decided not to participate in the VIII Duma elections. Her last official appearance was on the first Council of the Novye Bolsheviki bloc, there she blessed Bukharin and said 'Lenin has died, but his cause lives!'"
 
-rusd.114.t:0 "Field Marshal Sherbatchev dies"
+rusd.114.t:0 "General Sherbatchev dies"
 rusd.114.d:0 "A Hero of the Civil War passed away peacefully in his manor near Irkutsk yesterday."
 
-rusd.115.t:0 "Field Marshal Voronets dies"
+rusd.115.t:0 "General Voronets dies"
 rusd.115.d:0 "One of the most prominent military figures in the Army has passed away today."
 
-rusd.116.t:0 "Field Marshal Shaposhnikov dies"
+rusd.116.t:0 "General Shaposhnikov dies"
 rusd.116.d:0 "One of the most prominent military figures in the Army has passed away today."
 
 rusd.117.t:0 "General Alekseyev dies"
@@ -460,15 +460,15 @@ rusd.130.d:0 "The Tsar recently visited one of the local stores in our capital a
 rusd.130.a:0 "Three hoorays for our caring Tsar!"
 
 rusd.131.t:0 "A plot against Russia"
-rusd.131.d:0 "Death of Maria Spiridonova prevented possible riots of the left SRs, but the situation in the country is still troublesome. Though some of the socialist ideas are implemented in the ideology of the Savinkov's party, the radical syndicalists, who have majority in some Russian regions reject the ideals of the national state. But it turned out that the new government has many loyalists in the others circles of the Russian society. Old friends of Savinkov, the famous philosopher Dmitry Merezhkovsky and his wife Zinaida Gippius have published an appeal to the new leaders of the country. They claimed that Russia must be purified from the internal enemies, who want to spread the chaos and to betray the national interests. Their position give us a significant support among the citizens of Moscow and Petrograd."
+rusd.131.d:0 "The death of Maria Spiridonova prevented riots by the left SRs, but the situation in the country is still troublesome. Though some of the socialist ideas are implemented in the ideology of Savinkov's party, the radical syndicalists, who have majority in some Russian regions reject the ideals of the national state. Fortunately for Savinkov, the new government has many loyalists in others circles of Russian society. Old friends of Savinkov, the famous philosopher Dmitry Merezhkovsky and his wife Zinaida Gippius have published an appeal to the new leaders of the country. They claim that Russia must be purified from internal enemies, who want to spread chaos and betray the national interests. Their position gives us significant support among the citizens of Moscow and Petrograd."
 rusd.131.a:0 "All enemies of the nation will be stopped."
 
 rusd.132.t:0 "All-Russian Nation"
-rusd.132.d:0 "'The Crimea. New Russia. Little Russia. White Russia. Our lands. Our people. They are waiting for us. The Great Russians, the Little Russians and the White Russians are under the German Yoke. Will we leave them in trouble? Never. Will we save them? Yes. Because we don't forget about our brothers and sisters. The era of the betrayal is over. We are the Phoenix, that was destroyed by the German aggressors, but was reborn. Wait for us. We will come. The Russians should help the Russians' - Though the expansionist plans of Savinkov cannot be realise right now, but this declaration of the unity of the Russian Nation, strongly supported by the Vozhd of the Peasants and the Army shows, that Russia won't avoid the confrontation with the German Empire anymore."
+rusd.132.d:0 "'The Crimea. New Russia. Little Russia. White Russia. Our lands. Our people. They are waiting for us. The Great Russians, the Little Russians and the White Russians are under the German Yoke. Will we leave them in trouble? Never. Will we save them? Yes. Because we don't forget about our brothers and sisters. The era of the betrayal is over. We are the Phoenix that was destroyed by the German aggressors, but was reborn. Wait for us. We will come. Russians should help Russians' - Though the expansionist plans of Savinkov cannot be realised right now, this declaration of unity of the Russian nation, strongly supported by the Vozhd of the Peasants and the Army shows that Russia won't avoid the confrontation with the German Empire anymore."
 rusd.132.a:0 "One nation, one country, one Russia."
 
 rusd.133.t:0 "Our Russia"
-rusd.133.d:0 "'You, sons of the steppes. And you, nomads in the deserts. And many of you, who live all over the Russian land. Many of you betrayed us, when Russia needed your help. Many of you didn't give a helping hand to your compatriots, when they struggled against the red menace. We cannot forget it. But we can forgive you. New Russia needs your help in the restoration of its might. Help your country to make it great once again. Glory to Russia and glory to its heroes. It is your country too' - The new national policy of Russia is based on the idea of the supremacy of the Russians, but the idea of the friendship of the nations is popular as well. Savinkov combined these two ideas to secure the interests of the Russians and the minorities, who should be loyal, but also can use all the right of the citizens. This recreation of the old tsarist national policy can finally bring an order and peace to the people of Russia."
+rusd.133.d:0 "'You, sons of the steppes. And you, nomads in the deserts. And many of you, who live all over the Russian land. Many of you betrayed us, when Russia needed your help. Many of you didn't give a helping hand to your compatriots, when they struggled against the red menace. We cannot forget it. But we can forgive you. New Russia needs your help in the restoration of its might. Help your country to make it great once again. Glory to Russia and glory to its heroes. It is your country too' - The new national policy of Russia is based on the idea of the supremacy of the Russian people, but the idea of the friendship among the nations is popular as well. Savinkov has combined these two ideas to secure the interests of the Russians and the minorities, who should be loyal, but are also granted all the rights of citizenship. This recreation of the old Tsarist national policy can finally bring order and peace to the peoples of Russia."
 rusd.133.a:0 "Russia for the Russians and its loyal minorities!"
 
 rusd.134.t:0 "VDNKh"
@@ -476,7 +476,7 @@ rusd.134.d:0 "Exhibition of Achievements of the National Economy ('Vystavka Dost
 rusd.134.a:0 "That's how we will rebuild Russia."
 
 rusd.135.t:0 "Supreme Privy Council"
-rusd.135.d:0 "Though Savinkov and Kornilov have established a dictatorship, disputes between the Savinkov's republicans from his NRPR and the young officers, led by Kornilov still can break the cooperation of these two sides of the new regime. But it is obvious that the government can't allow the left radicals in the State Duma and the monarchists in the Senate use these controversies to destroy the rule of the army and NRPR. To prevent such unwanted events, Savinkov has proposed a recreation of the Supreme Privy Council ('Verkhovnyi Tainyi Sovet'), which once in the Russian history had both executive and legislative power and had consisted of the small number of the most important Russian ministers. Members of the SPC, as known as "Verkhovniki" will consist of 3 party members with Savinkov on the top along with Kornilov and 3 his old comrades from the Russian Army. The Council will be able to issue executive orders, which will have superiority over the Russian laws"
+rusd.135.d:0 "Though Savinkov and Kornilov have established a dictatorship, disputes between Savinkov's NRPR republicans and Kornilov's young officers can still endanger the cooperation of these two sides of the new regime. It is obvious that the government can't allow the left radicals in the State Duma and the monarchists in the Senate to use these controversies to destroy the rule of the army and the NRPR. To prevent such unwanted events, Savinkov has proposed a recreation of the Supreme Privy Council ('Verkhovnyi Tainyi Sovet'), which once had both executive and legislative power and consisted of a small number of the most important Russian ministers. Membership of the SPC, known as "Verkhovniki", will consist of 3 party members with Savinkov on top along with Kornilov and 3 of his old comrades from the Russian Army. The Council will be able to issue executive orders, which will have superiority over Russian law."
 rusd.135.a:0 "History repeats itself."
 
 rusd.136.t:0 "Felix Yusupov and the SPC"
@@ -489,11 +489,11 @@ rusd.137.d:0 "It turned out that using some special executive orders of the SPC,
 rusd.137.a:0 "Felix, you have to warn us!"
 
 rusd.138.t:0 "Savinkov's address to the nation."
-rusd.138.d:0 "Boris Savinkov, the closest associate of Supreme Ruler Kornilov, in his radio address to the Russian people announced that, driven by the desire to defend Russia from external and internal enemies, who try to take control over the country. He promised to deal with corruption inside state apparatus, conduct land reform, improve labour legislation and provide further recovery of the state. It seems, that the order finally returned to the country."
+rusd.138.d:0 "Boris Savinkov, the closest associate of Supreme Ruler Kornilov, in his radio address to the Russian people announced his dedication to defending Russia from external and internal enemies, who would try to take control over the country. He promised to deal with corruption inside the state apparatus, conduct land reform, improve labour legislation and provide further recovery of the state. It seems that order has finally returned to the country."
 rusd.138.a:0 "Finally..."
 
-rusd.139.t:0 "The reform of the Senate"
-rusd.139.d:0 "The recent political crisis have shown the need for extensive reform of the governmental apparatus. The Senate is a useless talking shop, many officials are corrupt, local authorities conceal the real situation in their regions. All these problems should be solved as soon as possible. According to the plan, the power vertical will be created, Senate's powers will be restricted, and special control commission will be organised into the state apparatus."
+rusd.139.t:0 "Reforming the Senate"
+rusd.139.d:0 "The recent political crisis has shown the need for extensive reform of the governmental apparatus. The Senate is a useless talking shop, many officials are corrupt and local authorities conceal the real situation in their regions. All these problems should be solved as soon as possible. Our plan outlines creation of a power vertical, the Senate's powers will be restricted and a special control commission will be organised and integrated in the state apparatus."
 rusd.139.a:0 "The new Senate will represent the new Russia!"
 
 rusd.140.t:0 "Nashe Delo"
@@ -501,7 +501,7 @@ rusd.140.d:0 "'It is a hard time for Russia and for us, Senators, but I have to 
 rusd.140.a:0 "Let it be"
 
 rusd.141.t:0 "Elite Gymnasiums"
-rusd.141.d:0 "Each city in the Russian Empire used to have a gymnasium, where the smartest children and the children of the local elite studied. With the republican reforms of Kerensky most of these schools were canceled and all these students had to study together with the sons and daughters of the workers and peasants. The Senators claim that such elite gymnasiums should be restored to be sure that the best representatives of the next Russian generation will have perfect conditions for study. Otherwise we can support the public schools, though it is clear that they will never reach the level of the old gymnasiums…"
+rusd.141.d:0 "Each city in the Russian Empire used to have a gymnasium, where the smartest children and the children of the local elite studied. With the republican reforms of Kerensky most of these schools were cancelled and all these students had to study together with the sons and daughters of the workers and peasants. The Senators claim that such elite gymnasiums should be restored to be sure that the best representatives of the next Russian generation will have perfect conditions for study. Otherwise we can support the public schools, though it is clear that they will never reach the level of the old gymnasiums…"
 rusd.141.a:0 "Elite gymnasiums for the smartest children!"
 rusd.141.b:0 "Public schools for everyone!"
 
@@ -586,8 +586,8 @@ rusd.160.d:0 "More than 20,000 Bolsheviks, former Soviet officials, members of t
 rusd.160.a:0 "Imprison them - we are not bloodthirsty Syndicalists after all."
 rusd.160.b:0 "Without them Russia will be better - purge them all!"
 
-rusd.161.t:0 "Trial of the 'Left Separatists'"
-rusd.161.d:0 "After the end of the Russian Civil War, some of the national minorities, which fought on the side of the Soviets against the White Army continued to disobey the central government, not only with the terrorist methods, but also using the opportunity to take part in the local legislative authorities, where they often found support of the different left movements, such as Mensheviks and part of the Left SRs. This part of the local nationalists became famous as the 'Left Separatists'. Though Boris Savinkov accepted the new national policy, which should regulate and improve the relations between the Russians and the Russian minorities, including groups, unloyal to Petrograd, he can't still forget about the problem of the 'Left Separatists', which still exist even after the prohibition of the Russian Left SR party and its allies. Thanks to our Minister of Security, the leaders, active members and terrorists from the most notorious Left Separatist movements were arrested and their property was nationalised."
+rusd.161.t:0 "Trial of the Left Separatists"
+rusd.161.d:0 "After the end of the Russian Civil War, some of the national minorities which fought on the side of the Soviets against the White Army continued to disobey the central government, not only through acts of terrorism, but also using the opportunity to take part in the local legislative authorities, where they often found support among the left movements, such as the Mensheviks and parts of the Left SRs. This movement of local nationalists became famous as the 'Left Separatists'. Though Boris Savinkov has accepted the new national policy, which should regulate and improve the relations between Russians and the Russian minorities, including groups disloyal to Petrograd, he cannot forget about the problem of the Left Separatists, which still exist even after the proscription of the Russian Left SR party and its allies. Thanks to our Ministry of Security, the leaders, active members and terrorists from the most notorious Left Separatist movements have been arrested and their property has been nationalised."
 rusd.161.a:0 "You fought the law and the law won!"
 
 ### Orthodoxy ###
