--- a/Kaiserreich Korean Translation/localisation/KR_Russia_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Russia_l_english.yml
@@ -524,7 +524,7 @@ RUS_DMI_ADM1:0 "Re-institute the Zemstvas"
 RUS_DMI_ADM1_desc:0 "The Zemstvo is a form of local governance and representation first introduced by Alexander II in 1864. It strongly weights favour to aristocrats but it still assures representation of the lower classes. It will, without a doubt, assure stability in our torn nation."
 RUS_DMI_ADM2:0 "Funding Frenzy"
 RUS_DMI_ADM2_desc:0 "By offering more economic support and tax reductions to the Zemstva, we can make sure they start funding local projects like never before. More over it will strengthen the connections between the people of Russia and these new established state authorities."
-RUS_DMI_ADM3:0 "National Investment Bank"
+RUS_DMI_ADM3:0 "국립 투자 은행"
 RUS_DMI_ADM3_desc:0 "A national investment bank will safeguard not only the resources invested by the Zemstva, but should also offer beneficial loans to local projects. This bank will also help us to control many transactions of our Zemstvas and the local businessmen."
 
 RUS_DMI_IND1:0 "자유 경제"
@@ -534,7 +534,7 @@ RUS_DMI_IND2_desc:0 "Economies, and businesses, need to be kept competitive in o
 RUS_DMI_IND3:0 "전쟁 준비 계획"
 RUS_DMI_IND3_desc:0 "With Russia's economy once again looking strong there's no doubt that our neighbours will look at us with envy hunger. We must make no mistake, a civilian economy in a time of war would end the rising star in a matter of months."
 
-RUS_DMI_POL1:0 "Rationalise the Laws"
+RUS_DMI_POL1:0 "법률 합리화"
 RUS_DMI_POL1_desc:0 "During the reign of Kerensky, Russian legislation constituted a bunch of the old imperial laws and some temporary laws, which were used after the Civil War. Using old groundwork of the imperial lawyers, Dmitri Pavlovich is going to restore his authority over all Russian territories and control local elites through the new laws, such as Criminal and Civil Codes."
 RUS_DMI_POL2:0 "A Movable Feast"
 RUS_DMI_POL2_desc:0 "From the far west to the far east, in every single palace of the nobles, feasts are held. Russia is rich, proud and stable yet again. A happy ruling class will in turn lead to a happy populace, or so is the theory at least."
@@ -543,13 +543,13 @@ RUS_DMI_POL3_desc:0 "While the Duma is more or less powerless, the Senate still,
 RUS_DMI_POL4:0 "Expansion of the 'Rumyantsev library'"
 RUS_DMI_POL4_desc:0 "The Rumyantsev Museum was Moscow's first public museum founded in 1831. Its collection of manuscripts and incunabula is large and we definitely should build a new building for the library, where the new generations of the Russian students will be able to educate themselves for the benefit of our country."
 
-RUS_ARI_POL1:0 "An Aristocratic Army"
+RUS_ARI_POL1:0 "귀족 군대"
 RUS_ARI_POL1_desc:0 "Throughout all of history, the vast majority of the worlds greatest generals have all been drafted from the ruling classes of society. No wonder, people used to power know how to command, after all. We should rely on an officer corps of aristocrats to lead our army in the future, as they have in the past."
-RUS_ARI_POL2:0 "Money for The Motherland"
+RUS_ARI_POL2:0 "조국을 위한 돈"
 RUS_ARI_POL2_desc:0 "With the loyalty of the wealthy, influential aristocracy of Russia secured, it's time we put some pressure on them. By securing taxes on the richest we can use this wealth to raise the living standards for all Russians, establishing a greater national unity."
-RUS_ARI_POL3:0 "Strengthen The Industry"
+RUS_ARI_POL3:0 "산업 강화"
 RUS_ARI_POL3_desc:0 "With many of our friends and associates securing important seats in the senate, it's easy to find the necessary connections to establish and expand the industry belonging to the oligarchs. In return for the opportunity, the aristocrats will be forever grateful."
-RUS_ARI_POL4:0 "Strengthen the Senate"
+RUS_ARI_POL4:0 "상원 강화"
 RUS_ARI_POL4_desc:0 "By now, the Duma holds very little influence compared to the Senate. It's about time we reduce its status to nothing more than something purely ceremonial and expand the legislative rights of the Senators instead."
 
 RUS_WRA_ADM1:0 "페레스트로이카"
@@ -563,7 +563,7 @@ RUS_WRA_IND2:0 "ZIR"
 RUS_WRA_IND2_desc:0 "'Zavod imeni Ryabushinskogo' or just 'ZIR' ('Ryabushinsky Plant') was founded in 1916 in Moscow and produced 1.5 tonne trucks for the Russian Army. We should expand this factory, as the reorganisation of our industry and agriculture can't be executed without cheap, modern trucks. These workplaces with decent salary will allow us to reduce unemployment in Moscow."
 RUS_WRA_NG1:0 "Party Land"
 RUS_WRA_NG1_desc:0 "As the Vozhd of the Peasants, Savinkov has promised that the Russian peasants will get more agricultural lands. Now he can finally fulfil his promises. The NRPR has concluded an agreement with landowners who support our party - they will sell their lands to us, but will get a rent from the peasants for 5 years. Even if the peasants can't pay their rent, our party will compensate the landowners."
-RUS_WRA_LA1:0 "Labour Army"
+RUS_WRA_LA1:0 "노동군"
 RUS_WRA_LA1_desc:0 "Not all members of the Combat Squads want to enrol in the army but there are other ways to support the state. The Labour Army was proposed to the SPC to rebuild the infrastructure in the Central Russia. The workers will earn a fixed salary, but have to work no less than 6 months. This policy will allow Russia to rebuild and protect itself from foreign economic aggressions."
 RUS_WRA_POL1:0 "Centralised Apparatus of Power"
 RUS_WRA_POL1_desc:0 "The state of affairs in the Russian state requires a full-scale reorganisation of public powers. The regional governments, the corrupt officials as well as the independent authorities that operated before shall now only obey to the Vozhd, and only to the Vozhd."
@@ -574,27 +574,27 @@ RUS_WRA_POL3_desc:0 "The Combat Squads of the NRPR helped us to restore order in
 RUS_WRA_POL4:0 "신 러시아"
 RUS_WRA_POL4_desc:0 "Boris Savinkov announced his intention to build a new Russia, stronger than it was ever before and a force for the world to reckon. But a new country needs a new society : courage, health, and work shall be our words of principle and the authority of the Vozhd shall be respected everywhere for he is the only one that can lead our country through these difficult times."
 
-RUS_stratocrat:0 "Statocratic Government"
+RUS_stratocrat:0 "군사 정부"
 RUS_stratocrat_desc:0 "The Kerensky governments chronic incapacity to rule proved itself dangerous for Russia. To secure our power proven officers will have to take up important offices of the administration. Only that way we'll enjoy a competent public service."
 RUS_military_spirit:0 "군사 정신"
 RUS_military_spirit_desc:0 "The post-war young generation is told to be "lost", lacking of any goal, any vision of future. The army is the only obstacle on the path leading to chaos and disintegration of Russia, they shall take up the education of our youth and soon the education of the whole country. A military spirit can only benefit the Motherland."
-RUS_legacy_whites:0 "Legacy of the Whites"
+RUS_legacy_whites:0 "백군의 유산"
 RUS_legacy_whites_desc:0 "The White generals defeated the Bolsheviks more than 15 years ago and brought peace and prosperity in the country. The White knights shall be honoured as the heroes of Russia."
-RUS_state_revanchism:0 "State Revanchism"
+RUS_state_revanchism:0 "국가 혁명"
 RUS_state_revanchism_desc:0 "Now that Russia has stabilised and grown stronger under the rule of her army she must now grow, we must reclaim the land that has been stolen to us and liberate their peoples that are chanting for our return!"
 
-RUS_more_resources:0 "Resources Programme"
+RUS_more_resources:0 "자원 계획"
 RUS_more_resources_desc:0 "Minerals are numerous in Russia and can boost the economy rapidly. That's why we have to initiate an extraction of the various minerals in the whole country."
-RUS_more_infrastructure:0 "Russian Railways"
+RUS_more_infrastructure:0 "러시아 철도"
 RUS_more_infrastructure_desc:0 "In the mid-1920s the Russian railways were privatised by more than 20 joint-stock companies, which often couldn't improve the railroads and extended them so steadily as in the Tsarist era. Some reforms will have to be done to improve our decadent railway system in the Central Russia and reorganise its current management."
 RUS_more_infrastructure_transsib:0 "Expansion of the Transsib railroad"
 RUS_more_infrastructure_transsib_desc:0 "When Russia lost a large part of the Transsiberian railroad to Ungern-Sternberg, it was impossible to expand the railroad, especially its part between Lake Baikal and the Transamur border. But now, when we liberated almost the whole Transsib railroad, we should finally improve the infrastructure in this region and reach Transamur!"
 rus_special_unlock_tooltip:0 "You must take the 6 focuses of an industrial path to unlock this"
-RUS_nuclear_effort:0 "Kremlin Project"
+RUS_nuclear_effort:0 "크렘린 계획"
 RUS_nuclear_effort_desc:0 "We must avoid lagging behind our rivals in nuclear fission, the most advanced of modern sciences."
-RUS_rocket_effort:0 "Rocketry Effort"
+RUS_rocket_effort:0 "로켓 개발"
 RUS_rocket_effort_desc:0 "Investments into rocketry could gift us not only with long range ballistic weapons, but also with technology for flight and travel."
-RUS_tech_slot:0 "New Researchers"
+RUS_tech_slot:0 "새로운 연구진"
 RUS_tech_slot_desc:0 "With our heavy investment in our industry and economy, we have managed to free up more resources to be put into research. In the end, it will pay us off very well."
 
 RUS_OKHRANA:0 "Reintroduce Okhranka"
